Fix footer overlap with page content

--- a/resources/base.scss
+++ b/resources/base.scss
@@ -100,7 +100,6 @@ footer {
     color: $color_primary50;
     display: block;
     width: 100%;
-    position: absolute;
     bottom: 0;
 }
 
